--- a/MiniProject/index.html
+++ b/MiniProject/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="btn">Click me</button>
+    <form action="" id="todoform">
+      <input id="todoinput" type="text" placeholder="enter a todo" />
+      <button id="btn" typ="submit">Click me</button>
+    </form>
+    <ul id="todolist"></ul>
     <script src="dist/index.js"></script>
   </body>
 </html>
